Fixes overflow again

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
@@ -34,6 +34,7 @@ nav {
     margin: 0;
     display: flex;
     justify-content: flex-end;
+    margin-right: 2rem;
 }
 
 .nav-item {
@@ -93,6 +94,10 @@ nav {
     width: 100vw;
 }
 
+#projects > .section-header {
+    margin-top: 3rem;
+}
+
 .section-header {
     font-size: 2.5rem;
     font-family: 'JetBrains Mono';
@@ -146,7 +151,6 @@ nav {
     align-items: center;
     padding: 1rem;
     margin: 2rem;
-    width: 100vw;
 }
 
 #contacting-icons {
